[WTF][Win] REGRESSION(r280795) error LNK2019: unresolved external symbol "class WTF::String __cdecl WTF::logLevelString(void)" https://bugs.webkit.org/show_bug.cgi?id=228937

Unreviewed build fix.

> error LNK2019: unresolved external symbol "class WTF::String __cdecl WTF::logLevelString(void)" (?logLevelString@WTF@@YA?AVString@1@XZ)
>   referenced in function "private: void __cdecl WebKit::GPUProcessProxy::platformInitializeGPUProcessParameters(struct WebKit::GPUProcessCreationParameters &)"
>   (?platformInitializeGPUProcessParameters@GPUProcessProxy@WebKit@@AEAAXAEAUGPUProcessCreationParameters@2@@Z)
>   bin64\WebKit2.dll : fatal error LNK1120: 1 unresolved externals

* wtf/LogInitialization.h: Added WTF_EXPORT_PRIVATE for logLevelString.

Canonical link: https://commits.webkit.org/240382@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280819 268f45cc-cd09-0410-ab3c-d52691b4dbfc